Article Routes Separated

--- a/views/add_article.ejs
+++ b/views/add_article.ejs
@@ -4,6 +4,7 @@
     <%- include('partials/head') %>
   </head>
   <body>
+    <%- include('partials/navbar') %>
     <h1>Add Article</h1>
     <form id = 'article' method = 'POST' action = '/article/add'>
       <label for="title">Title</label>
