--- a/views/article.ejs
+++ b/views/article.ejs
@@ -4,6 +4,7 @@
     <%- include('partials/head') %>
   </head>
   <body>
+    <%- include('partials/navbar') %>
     <h1> <%= article.title %> </h1>
     <h5> Written By: <%= article.author %> </h5>
     <p> <%= article.desc %> </p>
