--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
     <%- include('partials/head') %>
   </head>
   <body>
+    <%- include('partials/navbar') %>
     <h1> Articles </h1>
     <ul>
       <% articles.forEach(function(article) { %>
