--- a/views/add_article.ejs
+++ b/views/add_article.ejs
@@ -8,13 +8,13 @@
     <h1>Add Article</h1>
     <form id = 'article' method = 'POST' action = '/article/add'>
       <label for="title">Title</label>
-      <input type = 'text' name = 'title' placeholder = 'Title' required>
+      <input type = 'text' id = 'title' name = 'title' placeholder = 'Title' required>
       <br>
       <label for="author">Author</label>
-      <input type = 'text' name = 'author' placeholder = 'Author' required>
+      <input type = 'text' id = 'author' name = 'author' placeholder = 'Author' required>
       <br>
-      <label for="author">Description</label>
-      <textarea name = 'desc' placeholder = 'Description' required></textarea>
+      <label for="desc">Description</label>
+      <textarea id = 'desc' name = 'desc' placeholder = 'Description' required></textarea>
       <br>
       <input type = 'submit' value = 'Submit'>
     </form>
