--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,12 @@
 <nav>
   <ul>
-    <li><a href='/'>Home</a></li>
-    <li><a href='/article/add'>Add Article</a></li>
+    <% if(user) { %>
+      <li><a href='/'>Home</a></li>
+      <li><a href='/article/add'>Add Article</a></li>
+      <li><a href='/user/logout'>Logout</a></li>
+    <% } else { %>
+      <li><a href='/user/register'>Register</a></li>
+      <li><a href='/user/login'>Login</a></li>
+    <% } %>
   </ul>
 </nav>
