--- a/views/edit_article.ejs
+++ b/views/edit_article.ejs
@@ -5,19 +5,35 @@
   </head>
   <body>
     <%- include('partials/navbar') %>
-    <h1>Edit Article</h1>
-    <form id = 'article' method = 'POST' action = '/article/edit/<%= article._id %>'>
-      <label for="title">Title</label>
-      <input type = 'text' id = 'title' name = 'title' placeholder = 'Title' value='<%= article.title %>' required>
+    <div class="container">
+      <h1>Edit Article</h1>
       <br>
-      <label for="author">Author</label>
-      <input type = 'text' id = 'author' name = 'author' placeholder = 'Author' value='<%= article.author %>' required>
-      <br>
-      <label for="desc">Description</label>
-      <textarea id = 'desc' name = 'desc' placeholder = 'Description' required><%= article.desc %></textarea>
-      <br>
-      <input type = 'submit' value = 'Submit'>
-    </form>
+      <form id = 'article' class = "form-horizontal" method = 'POST' action = '/article/edit/<%= article._id %>'>
+        <div class="form-group">
+          <label for="title" class="col-sm-1 control-label">Title</label>
+          <div class="col-sm-3">
+            <input type = 'text' id = 'title' class = "form-control" name = 'title' placeholder = 'Title' value='<%= article.title %>' required>
+          </div>
+        </div>
+        <!--<div class="form-group">
+          <label for="author" class="col-sm-1 control-label">Author</label>
+          <div class="col-sm-3">
+            <input type = 'text' id = 'author' class = "form-control" name = 'author' placeholder = 'Author' value='<%= article.author %>' required>
+          </div>
+        </div>-->
+        <div class="form-group">
+          <label for="desc" class="col-sm-1 control-label">Description</label>
+          <div class="col-sm-3">
+            <textarea id = 'desc' name = 'desc' class = "form-control" placeholder = 'Description' required><%= article.desc %></textarea>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-1 col-sm-11">
+            <input type = 'submit' class = "btn btn-default" value = 'Submit'>
+          </div>
+        </div>
+      </form>
+    </div>
     <%- include('partials/footer') %>
   </body>
 </html>
