--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,12 +5,14 @@
   </head>
   <body>
     <%- include('partials/navbar') %>
-    <h1> Articles </h1>
-    <ul>
-      <% articles.forEach(function(article) { %>
-        <li> <a href = '/article/<%= article._id %>' > <%= article.title %> </a> </li>
-      <% }); %>
-    </ul>
+    <div class="container">
+      <h1> Articles </h1>
+      <div class="list-group">
+        <% articles.forEach(function(article) { %>
+          <a class="list-group-item" href = '/article/<%= article._id %>' > <%= article.title %> </a>
+        <% }); %>
+      </ul>
+    </div>
     <%- include('partials/footer') %>
   </body>
 </html>
