--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,16 +5,29 @@
   </head>
   <body>
     <%- include('partials/navbar') %>
-    <h1>User Registration</h1>
-    <form id = 'user' method = 'POST' action = '/user/login'>
-      <label for="username">Username</label>
-      <input type = 'text' id = 'username' name = 'username' placeholder = 'Username' required>
+    <div class = "container">
+      <h1>User Login</h1>
       <br>
-      <label for="password">Password</label>
-      <input type = 'password' id='password' name = 'password' placeholder = 'Password' required>
-      <br>
-      <input type = 'submit' value = 'Submit'>
-    </form>
+      <form id = 'user' class = "form-horizontal" method = 'POST' action = '/user/login'>
+        <div class="form-group">
+          <label for="username" class="col-sm-1 control-label">Username</label>
+          <div class="col-sm-3">
+            <input type = 'text' id = 'username' class = "form-control" name = 'username' placeholder = 'Username' required>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="password" class="col-sm-1 control-label">Password</label>
+          <div class="col-sm-3">
+            <input type = 'password' id='password' class = "form-control" name = 'password' placeholder = 'Password' required>
+          </div>
+        </div>
+        <div class = "form-group">
+          <div class = "col-sm-offset-1 col-sm-11">
+            <input class = "btn btn-default" type = 'submit' value = 'Login'>
+          </div>
+        </div>
+      </form>
+    </div>
     <%- include('partials/footer') %>
   </body>
 </html>
