--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,12 +1,19 @@
-<nav>
-  <ul>
-    <% if(user) { %>
-      <li><a href='/'>Home</a></li>
-      <li><a href='/article/add'>Add Article</a></li>
-      <li><a href='/user/logout'>Logout</a></li>
-    <% } else { %>
-      <li><a href='/user/register'>Register</a></li>
-      <li><a href='/user/login'>Login</a></li>
-    <% } %>
-  </ul>
-</nav>
+<header>
+  <div class="navbar navbar-default">
+    <div class="container">
+      <div class = "navbar-hearder">
+        <div class = "navbar-brand">Articles</div>
+      </div>
+      <ul class = "nav navbar-nav">
+        <% if(user) { %>
+          <li><a href='/'>Home</a></li>
+          <li><a href='/article/add'>Add Article</a></li>
+          <li><a href='/user/logout'>Logout</a></li>
+        <% } else { %>
+          <li><a href='/user/register'>Register</a></li>
+          <li><a href='/user/login'>Login</a></li>
+        <% } %>
+      </ul>
+    </div>
+  </div>
+</header>
