--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,25 +5,47 @@
   </head>
   <body>
     <%- include('partials/navbar') %>
-    <h1>User Registration</h1>
-    <form id = 'user' method = 'POST' action = '/user/register'>
-      <label for="name">Name</label>
-      <input type = 'text' id = 'name' name = 'name' placeholder = 'Name' required>
+    <div class="container">
+      <h1>User Registration</h1>
       <br>
-      <label for="email">Email</label>
-      <input type = 'email' id = 'email' name = 'email' placeholder = 'Email' required>
-      <br>
-      <label for="username">Username</label>
-      <input type = 'text' id = 'username' name = 'username' placeholder = 'Username' required>
-      <br>
-      <label for="password">Password</label>
-      <input type = 'password' id='password' name = 'password' placeholder = 'Password' required>
-      <br>
-      <label for="confirm_password">Confirm Password</label>
-      <input type = 'password' id = 'confirm_password' name = 'confirm_password' placeholder = 'Confirm Password' required>
-      <br>
-      <input type = 'submit' value = 'Submit'>
-    </form>
+      <form id = 'user' class="form-horizontal" method = 'POST' action = '/user/register'>
+        <div class="form-group">
+          <label for="name" class = "col-sm-1 control-label">Name</label>
+          <div class="col-sm-3">
+            <input type = 'text' id = 'name' class="form-control" name = 'name' placeholder = 'Name' required>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="email" class="col-sm-1 control-label">Email</label>
+          <div class="col-sm-3">
+            <input type = 'email' class = "form-control" id = 'email' name = 'email' placeholder = 'Email' required>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="username" class="col-sm-1 control-label">Username</label>
+          <div class="col-sm-3">
+            <input type = 'text' id = 'username' class="form-control" name = 'username' placeholder = 'Username' required>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="password" class="col-sm-1 control-label">Password</label>
+          <div class="col-sm-3">
+            <input type = 'password' id='password' class="form-control" name = 'password' placeholder = 'Password' required>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="confirm_password" class="col-sm-1 control-label">Confirm Password</label>
+          <div class="col-sm-3">
+            <input type = 'password' id = 'confirm_password' class="form-control" name = 'confirm_password' placeholder = 'Confirm Password' required>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-1 col-sm-11">
+            <input type = 'submit' class="btn btn-default" value = 'Submit'>
+          </div>
+        </div>
+      </form>
+    </div>
     <%- include('partials/footer') %>
   </body>
 </html>
